--- a/Nettoyage.ipynb
+++ b/Nettoyage.ipynb
@@ -616,6 +616,15 @@
    "source": [
     "df_clean.to_csv(\"data/heart_2022_clean.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5c3f451",
+   "metadata": {},
+   "source": [
+    " verifier si il y'a des valeurs aberrente , valeurs dupliquer\n",
+    " "
+   ]
   }
  ],
  "metadata": {
