--- a/main.ipynb
+++ b/main.ipynb
@@ -905,7 +905,7 @@
    "metadata": {},
    "source": [
     "<h1>Hypothèse : </br>\n",
-    "-Les hommes qui effectuent régulièrement des activités physiques ont moins de crise cardiaque que les femmes</h1>\n",
+    "-Les hommes ont moins de crise cardiaque que les femmes</h1>\n",
     "\n"
    ]
   },
@@ -1921,6 +1921,12 @@
    "execution_count": 116
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "<h1>Les personnes pratiquant une activité physique ont un risque de crise cardiaque plus faible.\n",
+   "id": "f6b57704b7a434a"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-07-08T18:19:16.451640Z",
@@ -1967,7 +1973,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "<h1>Les personnes pratiquant une activité physique ont un risque de crise cardiaque plus faible.\n",
+   "source": "<h1>Les personnes qui dorment moins de 6 heures par nuit ont un risque plus élevé de crise cardiaque.\n",
    "id": "f44dcff521f69616"
   },
   {
